# comp-chem

./: .gitignore  .gitmodules  COMMIT_GUIDE.md  CONTRIBUTING.md  README.md  prepare_commit.sh  pyproject.toml  remote.out  requirements.txt  setup.py  setup_and_push.sh
docs/: FSM_output_guide.md  MEP_pipeline.md  README.md
neb_out/: final.xyz  initial.xyz  neb_000.xyz  neb_001.xyz  neb_002.xyz  neb_003.xyz  neb_004.xyz  neb_005.xyz  neb_006.xyz  neb_007.xyz  neb_008.xyz  neb_009.xyz  neb_010.xyz  neb_011.xyz  neb_012.xyz  neb_013.xyz  neb_014.xyz  neb_015.xyz  neb_016.xyz  neb_017.xyz  neb_018.xyz  neb_019.xyz  neb_020.xyz  neb_021.xyz  neb_022.xyz  neb_023.xyz  neb_024.xyz  neb_025.xyz  neb_026.xyz  neb_027.xyz  neb_028.xyz  neb_029.xyz  neb_030.xyz  neb_031.xyz  neb_032.xyz  neb_033.xyz  neb_034.xyz  neb_035.xyz  neb_036.xyz  neb_037.xyz  (+2 more)
neb_plot_test/: neb_002.xyz  neb_003.xyz
neb_verbose_test/: final.xyz  neb_000.xyz  neb_001.xyz
path_xyz/: image_000.xyz  image_001.xyz  image_002.xyz  image_003.xyz  image_004.xyz  image_005.xyz  image_006.xyz  image_007.xyz  image_008.xyz  image_009.xyz  image_010.xyz  image_011.xyz  image_012.xyz  image_013.xyz  image_014.xyz
scan_out/: scan_000.xyz  scan_001.xyz  scan_002.xyz  scan_003.xyz  scan_004.xyz  scan_005.xyz  scan_006.xyz  scan_007.xyz  scan_008.xyz  scan_009.xyz  scan_010.xyz  scan_011.xyz  scan_012.xyz  scan_013.xyz  scan_014.xyz  scan_015.xyz  scan_016.xyz  scan_017.xyz  scan_018.xyz  scan_019.xyz  scan_020.xyz  scan_021.xyz  scan_022.xyz  scan_023.xyz  scan_024.xyz  scan_025.xyz  scan_026.xyz  scan_027.xyz  scan_028.xyz  scan_029.xyz  scan_030.xyz  scan_031.xyz  scan_032.xyz  scan_033.xyz  scan_034.xyz  scan_035.xyz  scan_036.xyz  scan_037.xyz  scan_038.xyz  scan_039.xyz  (+20 more)
scripts/: README.md  neb_interp_to_csv.py  plot_fsm_path.py  prepare_endpoints.py  prepare_initial_final_xyz.py  prepare_path_xyz.py  run_adsorption.py  (+2 more)
(+23 files in other folders)
